force-app/main/default/objects/SE_Request_Form__c/SE_Request_Form__c.object-meta.xml
<CustomObject>
    <label>DEPRECATE SE  Request Form</label>
    <nameField>
        <label>SE  Request Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SE Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>