force-app/main/default/objects/SE_Request_Form__c/fields/Analytics_cloud__c.field-meta.xml
<CustomField>
    <fullName>Analytics_cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics cloud</label>
    <type>Checkbox</type>
</CustomField>