force-app/main/default/objects/SE_Request_Form__c/fields/Are_they_an_existing_GP_user__c.field-meta.xml
<CustomField>
    <fullName>Are_they_an_existing_GP_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are they an existing GP user?</label>
    <type>Checkbox</type>
</CustomField>