force-app/main/default/objects/SE_Request_Form__c/fields/Auto_Number_for_AC__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_for_AC__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Auto Number for AC</label>
    <type>AutoNumber</type>
</CustomField>