force-app/main/default/objects/SE_Request_Form__c/fields/Cavallo_user_which_products_do_they_own__c.field-meta.xml
<CustomField>
    <fullName>Cavallo_user_which_products_do_they_own__c</fullName>
    <label>Cavallo user, which products do they own</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation Agent</fullName>
            </value>
            <value>
                <fullName>DataCollection</fullName>
            </value>
            <value>
                <fullName>DC Extended Warehouse</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Mfg Extended Pack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PayFabric</fullName>
            </value>
            <value>
                <fullName>SalesPad</fullName>
            </value>
            <value>
                <fullName>SalesPad Mobile</fullName>
            </value>
            <value>
                <fullName>ShipCenter</fullName>
            </value>
            <value>
                <fullName>ShipTo</fullName>
            </value>
            <value>
                <fullName>WebPortal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>