force-app/main/default/objects/SE_Request_Form__c/fields/Customer_Website__c.field-meta.xml
<CustomField>
    <fullName>Customer_Website__c</fullName>
    <formula>Opportunity__r.Account_Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Website</label>
    <type>Text</type>
</CustomField>