force-app/main/default/objects/SE_Request_Form__c/fields/Existing_Cavallo_SalesPad_user__c.field-meta.xml
<CustomField>
    <fullName>Existing_Cavallo_SalesPad_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Cavallo SalesPad user?</label>
    <type>Checkbox</type>
</CustomField>