force-app/main/default/objects/SE_Request_Form__c/fields/Google_Drive_Additional_Links__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Additional_Links__c</fullName>
    <formula>Opportunity__r.Google_Drive_Additional_Links__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Additional Links</label>
    <type>Text</type>
</CustomField>