force-app/main/default/objects/SE_Request_Form__c/fields/Is_this_direct_or_through_a_partner__c.field-meta.xml
<CustomField>
    <fullName>Is_this_direct_or_through_a_partner__c</fullName>
    <label>Is this direct or through a partner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>