force-app/main/default/objects/SE_Request_Form__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SE_Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>