force-app/main/default/objects/SE_Request_Form__c/fields/Please_list_any_known_competitors__c.field-meta.xml
<CustomField>
    <fullName>Please_list_any_known_competitors__c</fullName>
    <label>Please list any known competitors:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>