force-app/main/default/objects/SE_Request_Form__c/fields/Please_list_any_special_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Please_list_any_special_recommendations__c</fullName>
    <inlineHelpText>Please list any special recommendations for the call</inlineHelpText>
    <label>Please list any special recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>