force-app/main/default/objects/SE_Request_Form__c/fields/Requested_call_date_time__c.field-meta.xml
<CustomField>
    <fullName>Requested_call_date_time__c</fullName>
    <label>Requested call date/time:</label>
    <type>DateTime</type>
</CustomField>