force-app/main/default/objects/SE_Request_Form__c/fields/Requested_call_date_time_option_3__c.field-meta.xml
<CustomField>
    <fullName>Requested_call_date_time_option_3__c</fullName>
    <label>Requested call date/time - option 3:</label>
    <type>DateTime</type>
</CustomField>