force-app/main/default/objects/SE_Request_Form__c/fields/Role_of_the_person_s_on_the_demo__c.field-meta.xml
<CustomField>
    <fullName>Role_of_the_person_s_on_the_demo__c</fullName>
    <label>Role of the person(s) on the demo?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>