force-app/main/default/objects/SE_Request_Form__c/fields/Round_Robin_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Assignment__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Round Robin Assignment</label>
    <type>AutoNumber</type>
</CustomField>