force-app/main/default/objects/SE_Request_Form__c/fields/Round_robin_Assignment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Round_robin_Assignment_Formula__c</fullName>
    <formula>IF(  Opportunity__r.Analytics_Cloud__c = False , 1+ MOD( VALUE( Round_Robin_Assignment__c ) ,2), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round robin Assignment Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>