force-app/main/default/objects/SE_Request_Form__c/fields/Round_Robin_for_AC__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_for_AC__c</fullName>
    <formula>IF( Opportunity__r.Analytics_Cloud__c = True, MOD(VALUE(Auto_Number_for_AC__c),2)+1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin for AC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>