force-app/main/default/objects/SE_Request_Form__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SE_Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>