force-app/main/default/objects/SE_Request_Form__c/fields/SE_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>SE_Request_Status__c</fullName>
    <label>SE Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>