force-app/main/default/objects/SE_Request_Form__c/fields/What_is_the_client_s_budget__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_client_s_budget__c</fullName>
    <label>What is the client&apos;s budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$10k</fullName>
            </value>
            <value>
                <fullName>$10-25k</fullName>
            </value>
            <value>
                <fullName>$25-50k</fullName>
            </value>
            <value>
                <fullName>$50-100k</fullName>
            </value>
            <value>
                <fullName>$100k+</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>