force-app/main/default/objects/SE_Request_Form__c/fields/What_software_are_they_currently_running__c.field-meta.xml
<CustomField>
    <fullName>What_software_are_they_currently_running__c</fullName>
    <label>What software are they currently running</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>