force-app/main/default/objects/SE_Request_Form__c/fields/Which_products_will_need_to_be_shown__c.field-meta.xml
<CustomField>
    <fullName>Which_products_will_need_to_be_shown__c</fullName>
    <label>Which products will need to be shown?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Automation Agent</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Binary Stream MEM</fullName>
            </value>
            <value>
                <fullName>Configurator Module</fullName>
            </value>
            <value>
                <fullName>CRM Module</fullName>
            </value>
            <value>
                <fullName>Customer &amp; Order Manager</fullName>
            </value>
            <value>
                <fullName>Customer Portal - Ext</fullName>
            </value>
            <value>
                <fullName>Customer Portal - Int</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Distribution Cloud</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Equipment Module</fullName>
            </value>
            <value>
                <fullName>FedEx/UPS Connector</fullName>
            </value>
            <value>
                <fullName>Inventory Manager</fullName>
            </value>
            <value>
                <fullName>Kwiktag</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PaceJet</fullName>
            </value>
            <value>
                <fullName>PayFabric</fullName>
            </value>
            <value>
                <fullName>Pricing Module</fullName>
            </value>
            <value>
                <fullName>Purchasing Module</fullName>
            </value>
            <value>
                <fullName>Returns Tracker</fullName>
            </value>
            <value>
                <fullName>SalesPad</fullName>
            </value>
            <value>
                <fullName>SalesPad Mobile</fullName>
            </value>
            <value>
                <fullName>Shipping Module</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters</fullName>
            </value>
            <value>
                <fullName>Workflow &amp; Profit Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>