force-app/main/default/objects/SE_Request_Form__c/validationRules/What_software_are_they_currently_running.validationRule-meta.xml
<ValidationRule>
    <fullName>What_software_are_they_currently_running</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( What_software_are_they_currently_running__c )</errorConditionFormula>
    <errorDisplayField>What_software_are_they_currently_running__c</errorDisplayField>
    <errorMessage>Required fields are not entered on SE Request Form tab on opportunity. Please make sure to update all the fields on SE request form before submitting SE request.</errorMessage>
</ValidationRule>