force-app/main/default/objects/SE_Request_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Name__c</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Round_Robin_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>