force-app/main/default/objects/SE_Request_Form__c/listViews/Bob_Buresh_SE_Requests.listView-meta.xml
<ListView>
    <fullName>Bob_Buresh_SE_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Bob Buresh</value>
    </filters>
    <label>Bob Buresh SE Requests</label>
    <sharedTo>
        <role>Territory_Manager</role>
    </sharedTo>
</ListView>