force-app/main/default/objects/SE_Request_Form__c/listViews/Matt_Hillman_SE_Requests.listView-meta.xml
<ListView>
    <fullName>Matt_Hillman_SE_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>SE_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Hillman</value>
    </filters>
    <label>Matt Hillman SE Requests</label>
    <sharedTo>
        <role>CAM</role>
    </sharedTo>
</ListView>