force-app/main/default/objects/SE_Request_Form__c/listViews/New_Requests_AC.listView-meta.xml
<ListView>
    <fullName>New_Requests_AC</fullName>
    <columns>NAME</columns>
    <columns>SE_Request_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Analytics_cloud__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>New Requests - AC</label>
</ListView>