force-app/main/default/objects/SE_Request_Form__c/listViews/Rejected_SE_Requests.listView-meta.xml
<ListView>
    <fullName>Rejected_SE_Requests</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Partner_Name__c</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SE_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SE_Request_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected SE Requests</label>
    <sharedTo>
        <group>SE_Request_Forms_for_Ken</group>
    </sharedTo>
</ListView>